packages/compiler/tests/snapshots/codegen__slot_named_codegen.snap
---
source: tests/codegen.rs
assertion_line: 244
expression: output.js
---
import { branch, leaf, slot } from '@aihu/arbor'
import { defineComponent, defineElement } from '@aihu/runtime'

const createSlotBoundary = (o, b) => slot(o?.name ?? undefined);

defineElement('x-named-slot', defineComponent((_ctx) => {
  return branch('div', undefined, [createSlotBoundary({ name: 'header', expose: [] }, () => { return branch(null, undefined, []) })])
}))
