packages/compiler/tests/snapshots/codegen__static_attr_passthrough.snap
---
source: tests/codegen.rs
expression: output.js
---
// @aihu:extract read=agents call=anonymous
import { branch, leaf, slot } from '@aihu/arbor'
import { defineComponent, defineElement } from '@aihu/runtime'

defineElement('x-div', defineComponent((_ctx) => {
  return branch('div', { class: 'counter' }, [])
}))
