packages/compiler/tests/snapshots/codegen__style_block_warning.snap
---
source: tests/codegen.rs
assertion_line: 129
expression: output.js
---
import { branch, leaf } from '@scribe/arbor'
import type { Signal } from '@scribe/signals'
import { signal } from '@scribe/signals'
import { defineComponent, defineElement } from '@scribe/runtime'

const __style__ = new CSSStyleSheet();
__style__.replaceSync(`span { color: red; }`);
defineElement('x-styled', defineComponent((ctx) => {
  (ctx.host as ShadowRoot).adoptedStyleSheets = [__style__];
  const [count, setCount] = signal(0)

  return branch('span', undefined, [leaf([count, setCount] as unknown as Signal<string>)])
}))
