packages/compiler/tests/snapshots/codegen__style_scoped_emits_css_in_function_form.snap
---
source: tests/codegen.rs
expression: output.js
---
// @aihu:extract read=agents call=anonymous
// @aihu:island interactive
import { branch, leaf, slot } from '@aihu/arbor'
import type { Signal } from '@aihu/signals'
import { signal } from '@aihu/signals'
import { defineComponent, defineElement } from '@aihu/runtime'

const __style__ = new CSSStyleSheet();
__style__.replaceSync(`span { color: red; }`);
defineElement('x-styled', defineComponent((ctx) => {
  (ctx.host as ShadowRoot).adoptedStyleSheets = [__style__];
  const [count, setCount] = signal(0)

  return branch('span', undefined, [leaf([count, setCount] as unknown as Signal<string>)])
}))
